--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,7 +15,7 @@
   body {
     background-color: rgb(176, 161, 224);
     color: #333;
-    font-family: Sans-Serif;
+    font-family: courier, Sans-Serif;
     line-height: 18px;
   }
 
@@ -27,7 +27,7 @@
     margin: 16px auto;
     max-width: 960px;
     padding: 2.25%; /* 18px / 800px */
-    width: 85%;
+    width: 60%;
   }
 
   h1 {
@@ -81,6 +81,18 @@
     margin-top: 20px;
     padding-top: 20px;
   }
+
+  .entry {
+    background-color: rgb(240, 233, 180);
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
+    
+    padding: 5px;
+    margin-bottom: 5vh;
+  }
+
+
 }
 
 @media screen and (max-width: 600px) {
